--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -8,10 +8,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="sidebar.additional">
-            <block class="Magento\Framework\View\Element\Template"
-                   name="shipping.remaining.cost.sidebar"
-                   template="Space_FreeShippingRemainingCost::category/shipping-remaining-cost/sidebar.phtml">
+        <referenceContainer name="content.top">
+            <block name="shipping.remaining.cost.sidebar"
+                   template="Space_FreeShippingRemainingCost::content/content-message.phtml">
                 <arguments>
                     <argument name="jsLayout" xsi:type="array">
                         <item name="components" xsi:type="array">
