--- a/view/frontend/templates/sidebar/sidebar-block.phtml
+++ b/view/frontend/templates/sidebar/sidebar-block.phtml
@@ -19,8 +19,7 @@
         </strong>
     </div>
     <div class="block-content">
-        <span data-bind="html: getRemainingMessage()"></span><br />
-        <span data-bind="html: getRandomValue()"></span>
+        <span data-bind="html: getRemainingMessage()"></span>
     </div>
 </div>
 <script type="text/x-magento-init">
