--- a/view/frontend/templates/content/content-message.phtml
+++ b/view/frontend/templates/content/content-message.phtml
@@ -11,7 +11,6 @@
  */
 
 $viewModel = $block->getData('view_model');
-$baseMessage = $escaper->escapeHtml($viewModel->getBaseMessage(), ['span']);
 ?>
 <div class="block block-shipping-remaining-cost-message"
      data-bind="scope: 'shippingRemainingCost'"
@@ -25,18 +24,10 @@ $baseMessage = $escaper->escapeHtml($viewModel->getBaseMessage(), ['span']);
         <!-- /ko -->
     </div>
 </div>
-<script type="text/x-magento-init">
-    {
-        "[data-role=shipping-remaining-cost-message]": {
-            "Magento_Ui/js/core/app": {
-                "components": {
-                    "shippingRemainingCost": {
-                        "component": "Space_FreeShippingRemainingCost/js/view/shipping-remaining-cost",
-                        "isShowIfCartEmpty": "<?= $escaper->escapeHtml($viewModel->isShowIfCartEmpty()) ?>",
-                        "defaultMessage": <?= /* @noEscape */ $viewModel->getDefaultMessage($baseMessage) ?>
-                    }
-                }
-            }
-        }
-    }
-</script>
+<?php $scriptBlock = $block->getChildBlock('shipping.remaining.cost.sidebar.script')
+        ->setData('view_model', $viewModel)
+        ->setData('scripId', '[data-role=shipping-remaining-cost-message]');
+?>
+<?php if ($scriptBlock): ?>
+    <?= $scriptBlock->toHtml() ?>
+<?php endif; ?>
