--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -3,7 +3,8 @@
  * @license http://www.opensource.org/licenses/mit-license.html  MIT License
  */
 
-.block-shipping-remaining-cost-message {
+.block-shipping-remaining-cost-message,
+.block-shipping-remaining-cost-sidebar {
     .block-content {
         .price {
             font-weight: 700;
