--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -11,3 +11,23 @@
         }
     }
 }
+
+.block-shipping-remaining-cost-sidebar {
+    .block-title {
+        &:extend(.abs-block-title all);
+        margin: 0 0 2rem;
+    }
+
+    .block-title strong {
+        font-size: 18px;
+        font-weight: 300;
+        vertical-align: middle;
+    }
+}
+
+.block-shipping-remaining-cost-message {
+    .block-content {
+        background: @secondary__color__light;
+        padding: 1rem;
+    }
+}
