--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -4,7 +4,8 @@
  */
 
 .block-shipping-remaining-cost-message,
-.block-shipping-remaining-cost-sidebar {
+.block-shipping-remaining-cost-sidebar,
+.block-shipping-remaining-cost-widget {
     .block-content {
         .price {
             font-weight: 700;
@@ -12,7 +13,8 @@
     }
 }
 
-.block-shipping-remaining-cost-sidebar {
+.block-shipping-remaining-cost-sidebar,
+.block-shipping-remaining-cost-widget {
     .block-title {
         &:extend(.abs-block-title all);
         margin: 0 0 2rem;
@@ -25,7 +27,8 @@
     }
 }
 
-.block-shipping-remaining-cost-message {
+.block-shipping-remaining-cost-message,
+.block-shipping-remaining-cost-widget {
     .block-content {
         background: @secondary__color__light;
         padding: 1rem;
